tracardi-networking/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-public-svc-external
  namespace: tracardi-ingress
spec:
  type: ExternalName
  externalName: be-public-svc.tracardi-com-090.svc.cluster.local
