tracardi-networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-api-public-ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "ingress.tracardi.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "be-public-svc-external"
                port:
                  number: 8585
